# battle-line

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
docs/: CONTRIBUTING.md  RULES.md
include/: Deck.h  Game.h  InputHandler.h  Player.h
include/cards/: Card.h  CardEffectStrategy.h  TacticsCard.h  TroopCard.h
include/piles/: DiscardPile.h  Pile.h  TacticsCardPile.h  TroopCardPile.h
include/players/: Player.h
include/regions/: Region.h  RegionsManager.h
src/: Deck.cpp  Game.cpp  InputHandler.cpp  Player.cpp
src/cards/: CardEffectStrategy.cpp  TacticsCard.cpp  TroopCard.cpp
src/piles/: DiscardPile.cpp  Pile.cpp  TacticsCardPile.cpp  TroopCardPile.cpp
src/regions/: Region.cpp  RegionsManager.cpp
